# DooDoo-Bot

./: .breakpoints  .env  help_structure.py  keep_alive.py  main.py  peepee.py  prefix.json  pyproject.toml  replit.nix  requirements.txt  tempCodeRunnerFile.py  testing
bot-env/: pyvenv.cfg
bot-env/Scripts/: activate  activate.bat
cogs/: Dev.py  Fun.py  Help.py  Misc.py  Moderation.py
